--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.12",
     "@wordpress/e2e-test-utils-playwright": "^1.0.0"
+  },
+  "dependencies": {
+    "playwright": "^1.44.1"
   }
 }
